{
    "name": "GameInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "bb1c87b9-de1d-401a-bea3-b50d41957847",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "8bab53e8-18ff-43b5-879e-9812e78e10d5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Accelerate",
                    "type": "Button",
                    "id": "0a9869ff-4b3d-4ff7-a99e-4ef0c612d150",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Decelerate",
                    "type": "Button",
                    "id": "81293e69-935e-47ed-8b4f-cec0c106363b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TurnLeft",
                    "type": "Button",
                    "id": "0facdfd1-ac75-467b-b58d-6d6dc7a45283",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TurnRight",
                    "type": "Button",
                    "id": "65b1e3ed-45d6-46ff-a143-67f61b7d5fec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "be8a06af-977d-4fa5-84c5-ec99849476e4",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3dac9934-e9b2-4fd4-a7da-06fc4877856d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accelerate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d4e9615-25b1-416d-93d6-6a09e213a19a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Decelerate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e427348-32d8-4711-a7dd-859d52355cb3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9318ff06-e90d-49e9-b999-7131e19fe138",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}